--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Openflame by stuartmscott</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
+    <div class="wrapper">
+      <header>
         <h1>Openflame</h1>
-        <h2>A project to build an entire computing stack from scratch.</h2>
+        <p>A project to build an entire computing stack from scratch.</p>
 
-        <section id="downloads">
-          <a href="https://github.com/stuartmscott/OpenFlame/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/stuartmscott/OpenFlame/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/stuartmscott/OpenFlame" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="view"><a href="https://github.com/stuartmscott/OpenFlame">View the Project on GitHub <small>stuartmscott/OpenFlame</small></a></p>
 
-    <div class="container">
-      <section id="main_content">
+
+        <ul>
+          <li><a href="https://github.com/stuartmscott/OpenFlame/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/stuartmscott/OpenFlame/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/stuartmscott/OpenFlame">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="openflame" class="anchor" href="#openflame" aria-hidden="true"><span class="octicon octicon-link"></span></a>OpenFlame</h1>
 
 <p>A project to build an entire computing stack from scratch.</p>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/stuartmscott">stuartmscott</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
