--- a/index.html
+++ b/index.html
@@ -1,44 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Openflame by stuartmscott</title>
+    <meta name="description" content="Openflame : A project to build an entire computing stack from scratch.">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Openflame</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Openflame</h1>
-        <p>A project to build an entire computing stack from scratch.</p>
 
-        <p class="view"><a href="https://github.com/stuartmscott/OpenFlame">View the Project on GitHub <small>stuartmscott/OpenFlame</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/stuartmscott/OpenFlame">View on GitHub</a>
 
+          <h1 id="project_title">Openflame</h1>
+          <h2 id="project_tagline">A project to build an entire computing stack from scratch.</h2>
 
-        <ul>
-          <li><a href="https://github.com/stuartmscott/OpenFlame/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/stuartmscott/OpenFlame/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/stuartmscott/OpenFlame">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/stuartmscott/OpenFlame/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/stuartmscott/OpenFlame/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="openflame" class="anchor" href="#openflame" aria-hidden="true"><span class="octicon octicon-link"></span></a>OpenFlame</h1>
 
 <p>A project to build an entire computing stack from scratch.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/stuartmscott">stuartmscott</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Openflame maintained by <a href="https://github.com/stuartmscott">stuartmscott</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
