--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Openflame : A project to build an entire computing stack from scratch.">
+    <meta name="description" content="Openflame : Building the entire stack from scratch.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/OpenFlame/OpenFlame">View on GitHub</a>
 
           <h1 id="project_title">Openflame</h1>
-          <h2 id="project_tagline">A project to build an entire computing stack from scratch.</h2>
+          <h2 id="project_tagline">Building the entire stack from scratch.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/OpenFlame/OpenFlame/zipball/master">Download this project as a .zip file</a>
